# Casimir-of-LON327

./: .gitignore  README.md  pyproject.toml  run_0deg_runtime_budget_pilots.sh  run_full_casimir_N896_scan.sh  run_full_casimir_case_N896.py
.github/: casimir_audit_patch.py  patch_runtime_v3_catch.py  patch_runtime_v3_fixed.py  patch_runtime_v3_joint.py  patch_runtime_v3_payload.py  patch_runtime_v3_provider.py  runtime_policy_patch.b64  runtime_v3_patch.00  runtime_v3_patch.01  runtime_v3_patch.02  runtime_v3_patch.03  runtime_v3_patch.04a.hex  runtime_v3_patch.04b.hex
configs/: default_foundation.json
docs/: README.md  arbitrary_q_periodic_bz_design.md  arbitrary_q_uniform_refinement_diagnostic.md  arbitrary_q_vector_adaptive_implementation.md  architecture_minimal_response_pipeline.md  bdg_finite_q_validation_plan.md  best_effort_finite_q_casimir_route.md  casimir_adaptive_angular_v1.md  casimir_adaptive_joint_v1.md  casimir_adaptive_matsubara_v1.md  casimir_adaptive_outer_tail_v1.md  casimir_adaptive_radial_v1.md  casimir_production_chain_v1.md  current_route.md  finite_q_diagnostic_pipeline.md  finite_q_static_gauge_contract.md  finite_q_transverse_adaptive_gk21_contract.md  finite_q_transverse_panel_adaptive_contract.md  full_outer_integration_handoff.md  implementation_design.md  numerical_method_registry.json  outer_q_integration_contract.md  refactor_cleanup_audit.md  theory_path.md  transverse_point_sweet_spot.md
lno327/: __init__.py
outputs/: README.md
scripts/: 01_plot_bands.py  README.md  _shim.py  assess_n0_torque_sensitivity.py  audit_response_units.py  benchmark_bdg_normal_limit.py  benchmark_casimir_local_response_distance_scan.py  benchmark_casimir_local_response_integral.py  benchmark_normal_fs_adaptive_integration.py  benchmark_normal_fs_sensitive_sampling.py  compare_local_sheet_response_imag.py  compare_static_response_policies.py  compute_bdg_paramagnetic_kernel_imag.py  compute_normal_state_conductivity_imag.py  compute_normal_state_conductivity_real.py  converge_casimir_local_response_integral.py  convergence_response_imag.py  diagnose_bdg_diamagnetic_kernel.py  diagnose_bdg_paramagnetic_kernel.py  diagnose_bdg_total_kernel_imag.py  diagnose_finite_q_formula_consistency.py  diagnose_finite_q_local_limit_decomposition.py  diagnose_finite_q_raw_q0_consistency.py  diagnose_finite_q_response_anisotropy.py  diagnose_nonlocal_response_interface.py  (+17 more)
(+2143 files in other folders)
