[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lno327-casimir-torque"
version = "0.1.0"
description = "Foundational LNO327 superconducting pairing and Casimir-torque utilities."
requires-python = ">=3.10"
dependencies = ["numpy>=1.23", "scipy>=1.9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
