[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lno327-casimir-torque"
version = "0.1.0"
description = "LNO327 finite-q response and full adaptive Casimir integration."
requires-python = ">=3.10"
dependencies = ["numpy>=1.23", "scipy>=1.9", "threadpoolctl>=3", "psutil>=5"]

[project.optional-dependencies]
validation = ["threadpoolctl>=3", "psutil>=5"]
dev = ["pytest>=7", "matplotlib>=3.6", "threadpoolctl>=3", "psutil>=5"]
plot = ["matplotlib>=3.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
    "unit: fast tests for stable package behavior and local numerical identities",
    "diagnostic: tests that exercise research diagnostics and prototype result fields",
    "benchmark: reduced-size benchmark and convergence plumbing tests",
    "regression: historical research-stage behavior kept to protect prior conclusions",
]
